# deploy-experiments

./: .env.example  .gitignore  Cargo.toml  README.md  build.sh  package-lock.json  package.json  run.sh  squarecloud.app  tailwind.config.js  vite.config.js
.github/: install-squarecloud-cli.sh
.github/workflows/: deploy.yaml  tests.yaml
src/: main.rs  routes.rs
www/: app.tsx  root.hbs
www/pages/: Foo.tsx  Index.tsx
